updating data entry

--- a/ALGAS_SPRINT.ipynb
+++ b/ALGAS_SPRINT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "e644d239",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "id": "88b0512d",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 46,
    "id": "16cc4581",
    "metadata": {
     "scrolled": true
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "id": "303a0e0c",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "id": "58b46677",
    "metadata": {},
    "outputs": [],
@@ -115,21 +115,10 @@
     "from datetime import datetime\n",
     "from sys import getsizeof\n",
     "\n",
-    "\n",
-    "def get_data_ranges() -> tuple:\n",
-    "    return (\n",
-    "        range(100000, 600000, 100000),\n",
-    "        range(1000, 6000, 100), \n",
-    "        range(100, 600, 100), \n",
-    "        range(10, 60, 10), \n",
-    "        range(1000000, 6000000, 1000000)\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def append_data(data: list) -> list:\n",
+    "def append_data(data) -> list:\n",
     "    dados = []\n",
     "    memory_accumulator = 0\n",
-    "    for range_data in data:\n",
+    "    for range_data in data.values():\n",
     "        for value in range_data:\n",
     "            inicio = datetime.now()\n",
     "            acumulador = 0\n",
@@ -141,18 +130,14 @@
     "    return dados\n",
     "\n",
     "\n",
-    "def generate_data(sort: bool = False) -> list:\n",
-    "    dados = append_data(get_data_ranges())\n",
-    "\n",
-    "    if sort:\n",
-    "        dados = sorted(dados, key=lambda x: x[0])\n",
-    "\n",
+    "def generate_data(data : dict) -> list:\n",
+    "    dados = append_data(data)\n",
     "    return dados "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 54,
    "id": "f96ec8d7",
    "metadata": {},
    "outputs": [
@@ -160,28 +145,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inseriu\n"
+      "Menu\n",
+      "1-Usuario, por favor insira range de dados 5 vezes:\n",
+      "2-sair\n",
+      "3-Inserir dados(somente depois do opcao 1)\n",
+      "escolha:1\n",
+      "range:  0\n",
+      "insira o range inicio:10\n",
+      "insira range fim:60\n",
+      "insira range pulo:1\n",
+      "range:  1\n",
+      "insira o range inicio:1000\n",
+      "insira range fim:6000\n",
+      "insira range pulo:100\n",
+      "range:  2\n",
+      "insira o range inicio:100000\n",
+      "insira range fim:600000\n",
+      "insira range pulo:100000\n",
+      "range:  3\n",
+      "insira o range inicio:10000\n",
+      "insira range fim:60000\n",
+      "insira range pulo:1000\n",
+      "range:  4\n",
+      "insira o range inicio:100\n",
+      "insira range fim:600\n",
+      "insira range pulo:10\n",
+      "range: {0: [10, 60, 1], 1: [1000, 6000, 100], 2: [100000, 600000, 100000], 3: [10000, 60000, 1000], 4: [100, 600, 10]}\n",
+      "Menu\n",
+      "1-Usuario, por favor insira range de dados 5 vezes:\n",
+      "2-sair\n",
+      "3-Inserir dados(somente depois do opcao 1)\n",
+      "escolha:3\n",
+      "inserindo: (10, 28, 0)\n",
+      "inserindo: (60, 56, 0)\n",
+      "inserindo: (1, 84, 0)\n",
+      "inserindo: (1000, 112, 0)\n",
+      "inserindo: (6000, 140, 2339)\n",
+      "inserindo: (100, 168, 0)\n",
+      "inserindo: (100000, 196, 10559)\n",
+      "inserindo: (600000, 224, 48028)\n",
+      "inserindo: (100000, 252, 0)\n",
+      "inserindo: (10000, 280, 0)\n",
+      "inserindo: (60000, 308, 0)\n",
+      "inserindo: (1000, 336, 0)\n",
+      "inserindo: (100, 364, 0)\n",
+      "inserindo: (600, 392, 0)\n",
+      "inserindo: (10, 420, 0)\n",
+      "Inseriu\n",
+      "Menu\n",
+      "1-Usuario, por favor insira range de dados 5 vezes:\n",
+      "2-sair\n",
+      "3-Inserir dados(somente depois do opcao 1)\n",
+      "escolha:2\n"
      ]
     }
    ],
    "source": [
-    "dadosX = generate_data()\n",
-    "db = DatabaseManager()\n",
-    "db.transact_begin()\n",
-    "#for dado in dadosX:\n",
-    "db.insert(dadosX)\n",
-    "\n",
-    "db.transact_commit()\n",
-    "print(\"Inseriu\")"
+    "rangeDadosInicio=0\n",
+    "rangeDadosFim=0\n",
+    "rangeDadosPulo=0\n",
+    "rangeDados={}\n",
+    "while True:\n",
+    "    print(\"Menu\")\n",
+    "    print(\"1-Usuario, por favor insira range de dados 5 vezes:\")\n",
+    "    print(\"2-sair\")\n",
+    "    print(\"3-Inserir dados(somente depois do opcao 1)\")\n",
+    "    answer = int(input(\"escolha:\"))\n",
+    "    if answer == 2:\n",
+    "        break\n",
+    "    elif answer == 1:\n",
+    "        for i in range(0,5,1):\n",
+    "            print('range: ',i)\n",
+    "            rangeDadosInicio = int(input(\"insira o range inicio:\"))\n",
+    "            rangeDadosFim = int(input(\"insira range fim:\"))\n",
+    "            rangeDadosPulo = int(input(\"insira range pulo:\"))\n",
+    "            rangeDados[i] = [rangeDadosInicio,rangeDadosFim,rangeDadosPulo]\n",
+    "        print('range: ', end='')\n",
+    "        doubleRange = {k:v for (k,v) in rangeDados.items()}\n",
+    "        print(doubleRange)\n",
+    "    elif answer == 3:        \n",
+    "        dadosX = generate_data(rangeDados)\n",
+    "        for i in dadosX:\n",
+    "            print('inserindo:',i)\n",
+    "        db = DatabaseManager()\n",
+    "        db.transact_begin()\n",
+    "        db.insert(dadosX)\n",
+    "        db.transact_commit()\n",
+    "        print(\"Inseriu\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a213282c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -200,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.3"
   }
  },
  "nbformat": 4,
