some changes for ec2

--- a/ALGAS_SPRINT.ipynb
+++ b/ALGAS_SPRINT.ipynb
@@ -10,7 +10,7 @@
     "DB_HOST = \"localhost\"\n",
     "DB_PORT = \"3306\"\n",
     "DB_USER = \"root\"\n",
-    "DB_PASSWORD = \"root\"\n",
+    "DB_PASSWORD = \"urubu100\"\n",
     "DATABASE = \"ALGAS\"\n",
     "\n",
     "CREATE_QUERY = \"CREATE TABLE IF NOT EXISTS dados (id INT PRIMARY KEY AUTO_INCREMENT, valor INT, espacoMemoria INT, tempoExecucao INT)\"\n",
